// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Roman Calculator 1`] = `
<div
  className="container-display"
>
  <div
    className="result-container"
  >
    <div
      className="text-display"
    >
      
    </div>
    <div
      className="result-heading"
    >
      
    </div>
  </div>
  <div
    className="main-container1"
  >
    <div>
      <div
        className="calculator-container"
      >
        <button
          className="block-1"
          onClick={[Function]}
        >
          /
        </button>
        <button
          className="block-1"
          onClick={[Function]}
        >
          *
        </button>
        <button
          className="block-1"
          onClick={[Function]}
        >
          -
        </button>
        <button
          className="block-1"
          onClick={[Function]}
        >
          +
        </button>
      </div>
      <div
        className="calculator-container"
      >
        <button
          className="block-2"
          onClick={[Function]}
        >
          C
        </button>
        <button
          className="block-2"
          onClick={[Function]}
        >
          D
        </button>
        <button
          className="block-2"
          onClick={[Function]}
        >
          M
        </button>
        <button
          className="block-1"
          onClick={[Function]}
        >
          Clr
        </button>
      </div>
      <div
        className="calculator-container-4"
      >
        <button
          className="block-2"
          onClick={[Function]}
        >
          I
        </button>
        <button
          className="block-2"
          onClick={[Function]}
        >
          V
        </button>
        <button
          className="block-2"
          onClick={[Function]}
        >
          X
        </button>
        <button
          className="block-2"
          onClick={[Function]}
        >
          L
        </button>
      </div>
      <div
        className="calculator-container-4"
      >
        <button
          className="delete"
          onClick={[Function]}
        >
          Del
        </button>
        <button
          className="delete-2"
          onClick={[Function]}
        >
          =
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing Roman Calculator 2`] = `
<div>
  <div
    className="calculator-container"
  >
    <button
      className="block-1"
      onClick={[Function]}
    >
      /
    </button>
    <button
      className="block-1"
      onClick={[Function]}
    >
      *
    </button>
    <button
      className="block-1"
      onClick={[Function]}
    >
      -
    </button>
    <button
      className="block-1"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="calculator-container"
  >
    <button
      className="block-2"
      onClick={[Function]}
    >
      C
    </button>
    <button
      className="block-2"
      onClick={[Function]}
    >
      D
    </button>
    <button
      className="block-2"
      onClick={[Function]}
    >
      M
    </button>
    <button
      className="block-1"
      onClick={[Function]}
    >
      Clr
    </button>
  </div>
  <div
    className="calculator-container-4"
  >
    <button
      className="block-2"
      onClick={[Function]}
    >
      I
    </button>
    <button
      className="block-2"
      onClick={[Function]}
    >
      V
    </button>
    <button
      className="block-2"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="block-2"
      onClick={[Function]}
    >
      L
    </button>
  </div>
  <div
    className="calculator-container-4"
  >
    <button
      className="delete"
      onClick={[Function]}
    >
      Del
    </button>
    <button
      className="delete-2"
      onClick={[Function]}
    >
      =
    </button>
  </div>
</div>
`;
